[gd_scene load_steps=17 format=3 uid="uid://cclltl1a7vf46"]

[ext_resource type="Script" uid="uid://bwv1ya4jvgn1" path="res://scene/player/player.gd" id="1_xo3ru"]
[ext_resource type="PackedScene" uid="uid://b236r0jrbuf7i" path="res://scene/bullet/bullet.tscn" id="2_hp4bs"]
[ext_resource type="Texture2D" uid="uid://bt1y45fav55jj" path="res://assets/player_space_ship/fly/ship_idle1.png" id="2_oh5ij"]
[ext_resource type="PackedScene" uid="uid://car4oh3m5ct6w" path="res://scene/particles/spark/spark.tscn" id="3_34jf3"]
[ext_resource type="Texture2D" uid="uid://dwwjaiiyh027" path="res://assets/player_space_ship/death/ship_death1.png" id="3_dk1vr"]
[ext_resource type="PackedScene" uid="uid://b7lho8548fq1w" path="res://scene/strong_bullet/strong_bullet.tscn" id="3_f5r2w"]
[ext_resource type="Texture2D" uid="uid://befsaxrl0cny" path="res://assets/player_space_ship/fly/ship_idle2.png" id="3_hp4bs"]
[ext_resource type="Texture2D" uid="uid://rlyucba22gyk" path="res://assets/player_space_ship/death/ship_death2.png" id="4_34jf3"]
[ext_resource type="Texture2D" uid="uid://cstynqdy8u2u2" path="res://assets/player_space_ship/fly/ship_idle3.png" id="4_g2vtq"]
[ext_resource type="Texture2D" uid="uid://cqgak42nhmmv0" path="res://assets/player_space_ship/fly/ship_idle4.png" id="5_2fvbb"]
[ext_resource type="Texture2D" uid="uid://cn62xrd3j6s2k" path="res://assets/player_space_ship/death/ship_death3.png" id="5_u7b46"]
[ext_resource type="Texture2D" uid="uid://cuse8bvmy38kx" path="res://assets/player_space_ship/death/ship_death4.png" id="6_j4wxg"]
[ext_resource type="Texture2D" uid="uid://5dc1c4lhnfl7" path="res://assets/player_space_ship/fly/ship_idle5.png" id="6_ml7e8"]
[ext_resource type="Texture2D" uid="uid://c5nyv1hv0t4r7" path="res://assets/player_space_ship/death/ship_death5.png" id="7_bup7g"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ihjo1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_dk1vr")
}, {
"duration": 1.0,
"texture": ExtResource("4_34jf3")
}, {
"duration": 1.0,
"texture": ExtResource("5_u7b46")
}, {
"duration": 1.0,
"texture": ExtResource("6_j4wxg")
}, {
"duration": 1.0,
"texture": ExtResource("7_bup7g")
}],
"loop": true,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_oh5ij")
}, {
"duration": 1.0,
"texture": ExtResource("3_hp4bs")
}, {
"duration": 1.0,
"texture": ExtResource("4_g2vtq")
}, {
"duration": 1.0,
"texture": ExtResource("5_2fvbb")
}, {
"duration": 1.0,
"texture": ExtResource("6_ml7e8")
}],
"loop": true,
"name": &"fly",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dk1vr"]
radius = 52.0
height = 130.09999

[node name="Player" type="Area2D" groups=["player"]]
script = ExtResource("1_xo3ru")
bullet_scene = ExtResource("2_hp4bs")
strong_bullet_scene = ExtResource("3_f5r2w")
spark = ExtResource("3_34jf3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_ihjo1")
animation = &"fly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5.9604645e-08, -9)
scale = Vector2(0.99999994, 0.99999994)
shape = SubResource("CapsuleShape2D_dk1vr")

[node name="DoubleBulletTimer" type="Timer" parent="."]

[node name="StrongBulletTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DoubleBulletTimer" to="." method="_on_double_bullet_timer_timeout"]
[connection signal="timeout" from="StrongBulletTimer" to="." method="_on_strong_bullet_timer_timeout"]
